--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [
     "divjoy"
   ],
+  "homepage": "http://blaisedev.github.io/aidez-moi",
   "dependencies": {
     "react": "16.12.0",
     "react-dom": "16.12.0",
@@ -23,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,5 +43,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  }
 }
